--- a/static_files/assignments/assignment_02.ipynb
+++ b/static_files/assignments/assignment_02.ipynb
@@ -51,7 +51,7 @@
     "<br/>\n",
     "\n",
     "\n",
-    "Assignment Page: []()\n",
+    "Assignment Page: [https://iust-deep-learning.github.io/981/assignments/02_image_task_and_visualization](https://iust-deep-learning.github.io/981/assignments/02_image_task_and_visualization)\n",
     "\n",
     "Course Forum: [https://groups.google.com/forum/#!forum/dl981/](https://groups.google.com/forum/#!forum/dl981/)"
    ]
