minor change to asg1

--- a/static_files/assignments/assignment_1.ipynb
+++ b/static_files/assignments/assignment_1.ipynb
@@ -221,7 +221,7 @@
         "    \n",
         "  Returns:\n",
         "    relu_out: A numpy array of the same shape as x. \n",
-        "      Basically relu function or its derivative applied to every element x\n",
+        "      Basically relu function or its derivative applied to every element of x\n",
         "               \n",
         "  \"\"\"\n",
         "\n",
@@ -241,7 +241,7 @@
         "    \n",
         "  Returns:\n",
         "    sig_out: A numpy array of the same shape as x. \n",
-        "      Basically sigmoid function or its derivative applied to every element x\n",
+        "      Basically sigmoid function or its derivative applied to every element of x\n",
         "               \n",
         "  \"\"\"\n",
         "\n",
@@ -269,9 +269,9 @@
         "# Test your implementation\n",
         "!wget -q https://github.com/iust-deep-learning/982/raw/master/static_files/assignments/asg01_assets/act_test.npy\n",
         "\n",
-        "x, relu_out, sig_out = np.load('act_test.npy', allow_pickle=True)\n",
-        "assert np.allclose( relu_out[0], relu(x, deriv=True), atol=1e-6, rtol=1e-5) and np.allclose(relu_out[1], relu(x, deriv=False), atol=1e-6, rtol=1e-5)\n",
-        "assert np.allclose(sig_out[0], sigmoid(x, deriv=True), atol=1e-6, rtol=1e-5) and np.allclose(sig_out[1], sigmoid(x, deriv=False), atol=1e-6, rtol=1e-5)\n"
+        "x_act, relu_out, sig_out = np.load('act_test.npy', allow_pickle=True)\n",
+        "assert np.allclose( relu_out[0], relu(x_act, deriv=True), atol=1e-6, rtol=1e-5) and np.allclose(relu_out[1], relu(x_act, deriv=False), atol=1e-6, rtol=1e-5)\n",
+        "assert np.allclose(sig_out[0], sigmoid(x_act, deriv=True), atol=1e-6, rtol=1e-5) and np.allclose(sig_out[1], sigmoid(x_act, deriv=False), atol=1e-6, rtol=1e-5)\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -317,8 +317,8 @@
         "<br> -  __parameters__: A list of dictionaries in the form of _{'w': weight, 'b': bias}_ where _weight_ and _bias_ are weight matrix and bias vector of a layer.\n",
         "<br>- __act_funcs__: A list of activation functions used in the corresponding layer.\n",
         "<br>- __activations__: A list of matrices each corresponding to the output of each layer.\n",
-        "<br>- __layer_ins__: A list of matrices each corresponding to the input of each layer.\n",
-        "<br> Note that we store inputs and outputs of the layers because we'll need them later for implementing the back-propagation algorithm. \n"
+        "<br>- __weighted_ins__: A list of matrices each corresponding to the weighted input of each layer. Weighted input, as the name suggests, is layer's input multiplied by layer's weights and added to layer's bias. Which then goes into the layer's activation function to compute the layer's activations(outputs)!\n",
+        "<br> Note that we store weighted inputs and outputs of the layers because we'll need them later for implementing the back-propagation algorithm. \n"
       ]
     },
     {
@@ -352,7 +352,7 @@
         "    self.parameters = []\n",
         "    self.act_funcs = []\n",
         "    self.activations = []\n",
-        "    self.layer_ins = []\n",
+        "    self.weighted_ins = []\n",
         "\n",
         "  def add_layer(self, layer_size, act_func=linear):\n",
         "    \"\"\"\n",
@@ -387,16 +387,16 @@
         "  Returns:\n",
         "    mlp_out: A numpy array of shape (b, out_dim) where b is the batch size and out_dim is the dimension of the output\n",
         "\n",
-        "    Hint: Don't forget to store inputs and outputs of each layer in self.layer_ins and self.activations respectively\n",
+        "    Hint: Don't forget to store weighted inputs and outputs of each layer in self.weighted_ins and self.activations respectively\n",
         "               \n",
         "  \"\"\"\n",
         "    self.activations = []\n",
-        "    self.layer_ins = []\n",
+        "    self.weighted_ins = []\n",
         "    mlp_out = X\n",
         "    ########################################\n",
         "    #     Put your implementation here     #\n",
         "    ######################################## \n",
-        "\n",
+        "    \n",
         "    \n",
         "\n",
         "    return mlp_out\n"
@@ -422,8 +422,8 @@
         "mlp.add_layer(32, relu)\n",
         "out = mlp.feed_forward(x)\n",
         "assert len(mlp.parameters) == 2\n",
-        "assert mlp.activations[0].shape == tuple([512, 64]) and mlp.layer_ins[0].shape == tuple([512, 64])\n",
-        "assert mlp.activations[1].shape == tuple([512, 32]) and mlp.layer_ins[1].shape == tuple([512, 32])\n",
+        "assert mlp.activations[0].shape == tuple([512, 64]) and mlp.weighted_ins[0].shape == tuple([512, 64])\n",
+        "assert mlp.activations[1].shape == tuple([512, 32]) and mlp.weighted_ins[1].shape == tuple([512, 32])\n",
         "assert out.shape == tuple([512, 32])\n",
         "assert np.array_equal(mlp.activations[-1], out)\n",
         "\n",
@@ -670,7 +670,7 @@
         "- calculate gradient of the loss with respect to $\\hat{y}$\n",
         "<br> $g \\longleftarrow \\nabla_\\hat{y} Loss$ \n",
         "- for each layer $L$ starting from the ouput layer: <br>\n",
-        "&emsp;&emsp; $g \\longleftarrow g \\odot f^\\prime(input^{(L)})$ &emsp; ($input^{(L)}$ is the input of $L$th layer and $f$ is the activation function)<br>\n",
+        "&emsp;&emsp; $g \\longleftarrow g \\odot f^\\prime(weightedInput^{(L)})$ &emsp; ($weightedInput^{(L)}$ is the weighted input of $L$th layer and $f$ is the activation function)<br>\n",
         "&emsp;&emsp; $\\nabla_{b^{(L)}}Loss \\longleftarrow \\sum_i^{batch} {g_i}$ <br>\n",
         "&emsp;&emsp; $\\nabla_{w^{(L)}}Loss \\longleftarrow output^{(L-1)T}g$ &emsp; ($output^{(L-1)}$ is the output of $(L-1)$th layer ) <br>\n",
         "&emsp;&emsp; $g \\longleftarrow gw^{(L)T}$\n",
@@ -701,8 +701,8 @@
         "    Compute the gradient of loss with respect to mlp's weights and biases\n",
         "  Args:\n",
         "    mlp: An object of MLP class\n",
-        "    loss_function: A function used as loss function of the mlp\n",
-        "    x: A numpy array of shape (batch_size, input_dim). The mlp's input\n",
+        "    loss_function: A function used as loss function of the MLP\n",
+        "    x: A numpy array of shape (batch_size, input_dim). The MLP's input\n",
         "    y: A numpy array of shape (batch_size, num_classes). Target labels\n",
         "    \n",
         "  Returns:\n",
@@ -721,7 +721,7 @@
         "  ### compute gradient of the loss with respect to network output\n",
         "  g = loss_function(y, y_hat, return_grad=True)\n",
         "\n",
-        "  ### You'll need the input in the last step of backprop so let's make a new list with x in the beggining\n",
+        "  ### You'll need the input in the last step of backprop so let's make a new list with x in the beginning\n",
         "  activations = [x] + mlp.activations \n",
         "  \n",
         "  for i in reversed(range(num_layers)):\n",
