fixed typo in asg1

--- a/static_files/assignments/assignment_1.ipynb
+++ b/static_files/assignments/assignment_1.ipynb
@@ -861,7 +861,7 @@
         "Instead of using gradient descent, we'll be using an extention of it called gradient descent with momentum. So instead of updating the parameters based only on current gradients, we take into account the gradients from previous steps! This way, parameter updates will have lower variance and convergence will be faster and smoother. \n",
         "$$ v \\leftarrow \\gamma  v - \\alpha \\nabla_wLoss$$ \n",
         "$$ w \\leftarrow w + v$$\n",
-        "Where $w$ is denotes mlp's weights and $v$ is called velocity which is basically a weighted average of all previous gradients.<br>\n",
+        "Where $w$ denotes mlp's weights and $v$ is called velocity which is basically a weighted average of all previous gradients.<br>\n",
         "Here $\\gamma$ determines how fast effects of the previous gradients fade and $\\alpha$ is the learning rate."
       ]
     },
