--- a/static_files/assignments/assignment_2.ipynb
+++ b/static_files/assignments/assignment_2.ipynb
@@ -486,7 +486,7 @@
         "colab": {}
       },
       "source": [
-        "modWideAndDeepel = load_model('WideAndDeep.h5')\n",
+        "WideAndDeep = load_model('WideAndDeep.h5')\n",
         "results = WideAndDeep.evaluate(x_test_CH, y_test_CH)\n",
         "print('Mean absolute error on test set: ', results[1])"
       ],
