--- a/static_files/assignments/assignment_2.ipynb
+++ b/static_files/assignments/assignment_2.ipynb
@@ -44,7 +44,7 @@
         "<br><br>\n",
         "\n",
         "\n",
-        "- **Assignment Due: ** 1399/01/15 23:59:00\n",
+        "- **Assignment Due: ** 1399/01/22 23:59:00\n",
         "- If you need any additional information, please review the assignment page on the course website.\n",
         "- The items you need to answer are highlighted in red and the coding parts you need to implement are denoted by:\n",
         "```\n",
@@ -146,6 +146,7 @@
         "colab": {}
       },
       "source": [
+        "%tensorflow_version 1.x\n",
         "import keras\n",
         "import numpy as np"
       ],
@@ -1298,7 +1299,7 @@
         "colab_type": "text"
       },
       "source": [
-        "In this part, we want to add Gaussian noise to the output of hidden layers of the network. You should implement a custom layer named **NoisyDense**. This layer is basically a regular Keras Dense layer but adds gaussian noise with $\\mu=0$ and a specified $\\sigma$ to the output of the Dense."
+        "In this part, we want to add Gaussian noise to the output of hidden layers of the network. You should implement a custom layer named **NoisyDense**. This layer is basically a regular Keras Dense layer but adds gaussian noise with $\\mu=0$ and a specified $\\sigma$ to the output of the Dense ***in the training phase***."
       ]
     },
     {
@@ -1371,7 +1372,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Try to a good value for $\\sigma$ to prevent overfitting."
+        "Try to find a good value for $\\sigma$ to prevent overfitting."
       ]
     },
     {
