--- a/static_files/assignments/Assignment3.ipynb
+++ b/static_files/assignments/Assignment3.ipynb
@@ -5,9 +5,7 @@
     "colab": {
       "name": "Assignment3.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "xsZcVHT6MBui"
-      ]
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -800,7 +798,7 @@
       "source": [
         "## PCA\n",
         "Principal components analysis is essentially just a coordinate transformation. The original data are plotted on an X-axis and a Y-axis. For two-dimensional data, PCA seeks to rotate these two axes so that the new axis X’ lies along the direction of maximum variation in the data. PCA requires that the axes be perpendicular, so in two dimensions the choice of X’ will determine Y’. You obtain the transformed data by reading the x and y values off this new set of axes, X’ and Y’. For more than two dimensions, the first axis is in the direction of most variation; the second, in direction of the next-most variation; and so on.\n",
-        "<p align=\"center\"><img src=\"https://miro.medium.com/max/462/1*QALwLkPJG45E7_DsOccdaw.png\" />   \n",
+        "<p align=\"center\"><img src=\"https://github.com/iust-deep-learning/982/raw/master/static_files/assignments/asg03_assets/1_QA.png\" />   \n",
         "</p>\n"
       ]
     },
@@ -939,12 +937,12 @@
         "A Support Vector Machine (SVM) is a discriminative classifier formally defined by a separating hyperplane. In other words, given labeled training data (supervised learning), the algorithm outputs an optimal hyperplane which categorizes new examples. In two dimentional space this hyperplane is a line dividing a plane in two parts where in each class lay in either side.\n",
         "\n",
         "Suppose you are given plot of two label classes on graph as shown in image (A). Can you decide a separating line for the classes?\n",
-        "<p align=\"center\"><img src=\"https://miro.medium.com/max/600/1*BpeH5_M58kJ5xXfwzxI8yA.png\"/> <center><figcaption>(A)</figcaption>  </center>  \n",
+        "<p align=\"center\"><img src=\"https://github.com/iust-deep-learning/982/raw/master/static_files/assignments/asg03_assets/1_Bp.png\"/> <center><figcaption>(A)</figcaption>  </center>  \n",
         "</p>\n",
         "\n",
         "You might have come up with something similar to following image (image B). It fairly separates the two classes. Any point that is left of line falls into black circle class and on right falls into blue square class. Separation of classes, that’s what SVM does. It finds out a line/ hyper-plane (in multidimensional space that separate outs classes).\n",
         "\n",
-        "<p align=\"center\"><img src=\"https://miro.medium.com/max/600/1*Sg6wjASoZHPphF10tcPZGg.png\" /> <center><figcaption>(B)</figcaption>  </center>\n",
+        "<p align=\"center\"><img src=\"https://github.com/iust-deep-learning/982/raw/master/static_files/assignments/asg03_assets/1_Sg.png\" /> <center><figcaption>(B)</figcaption>  </center>\n",
         "</p>\n",
         "\n",
         "## Making it a Bit complex…\n",
@@ -953,17 +951,17 @@
         "\n",
         "We apply transformation and add one more dimension as we call it z-axis. Lets assume value of points on z plane, *w = x² + y²*. In this case we can manipulate it as distance of point from z-origin. Now if we plot in z-axis, a clear separation is visible and a line can be drawn.\n",
         "\n",
-        "<p align=\"right\"><img src=\"https://miro.medium.com/max/600/1*C3j5m3E3KviEApHKleILZQ.png\" />   \n",
+        "<p align=\"right\"><img src=\"https://github.com/iust-deep-learning/982/raw/master/static_files/assignments/asg03_assets/1_C3.png\" />   \n",
         "</p><p align=\"center\">Can you draw a separating line in this plane?</p>\n",
         "\n",
-        "<p align=\"right\"><img src=\"https://miro.medium.com/max/600/1*FLolUnVUjqV0EGm3CYBPLw.png\" />   \n",
+        "<p align=\"right\"><img src=\"https://github.com/iust-deep-learning/982/raw/master/static_files/assignments/asg03_assets/1_FL.png\" />   \n",
         "</p>\n",
         "\n",
         "<p align=\"center\">plot of z-y axis. A separation can be made here.</p>\n",
         "\n",
         "When we transform back this line to original plane, it maps to circular boundary as shown in the following image. These transformations are called kernels.\n",
         "\n",
-        "<p align=\"right\"><img src=\"https://miro.medium.com/max/600/1*NN5VCpVg9gPCLYrDl0YFYw.png\" />  </p> \n",
+        "<p align=\"right\"><img src=\"https://github.com/iust-deep-learning/982/raw/master/static_files/assignments/asg03_assets/1_NN.png\" />  </p> \n",
         "\n",
         "<p align = \"center\">Transforming back to x-y plane, a line transforms to circle.</p>"
       ]
