--- a/static_files/assignments/assignment_4.ipynb
+++ b/static_files/assignments/assignment_4.ipynb
@@ -95,8 +95,8 @@
       "metadata": {
         "id": "ra5wTxj62CWc",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {}
       },
       "source": [
         "#@title Enter your information & \"RUN the cell!!\" { run: \"auto\" }\n",
@@ -553,7 +553,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Now you should complete the **create_BERT** function in the cell below. This function get BERT's hyper-parameters as its inputs and return a BERT model. Use the functional api to create the model.<br>\n",
+        "Now you should complete the **create_BERT** function in the cell below. This function gets BERT's hyper-parameters as its inputs and return a BERT model. Use the functional api to create the model.<br>\n",
         "Note that the returned model must have two outputs (just like the pre-trained BERTs): \n",
         "- The hidden states of the last encoder layer\n",
         "- Output of the pooler"
@@ -567,14 +567,22 @@
         "colab": {}
       },
       "source": [
-        "def create_BERT(vocab_size,\n",
-        "                maxlen,\n",
-        "                hidden_size,\n",
-        "                num_layers,\n",
-        "                num_att_heads,\n",
-        "                intermediate_size,\n",
-        "                drop_rate=0.1\n",
-        "                ):\n",
+        "def create_BERT(vocab_size, maxlen, hidden_size, num_layers, num_att_heads, intermediate_size, drop_rate=0.1):\n",
+        "\n",
+        "  \"\"\"\n",
+        "  creates a BERT model based on the arguments provided\n",
+        "\n",
+        "        Arguments:\n",
+        "        vocab_size: number of words in the vocabulary\n",
+        "        maxlen: maximum length of each sentence\n",
+        "        hidden_size: dimension of the hidden state of each encoder layer\n",
+        "        num_layers: number of encoder layers\n",
+        "        num_att_heads: number of attention heads in the multi-headed attention layer\n",
+        "        intermediate_size: dimension of the intermediate layer in the feed-forward sublayer of the encoders\n",
+        "        drop_rate: dropout rate of all the dropout layers used in the model\n",
+        "        returns: \n",
+        "        model: a BERT model \n",
+        "  \"\"\"\n",
         "  \n",
         "  ########################################\n",
         "  #     Put your implementation here     #\n",
@@ -942,7 +950,7 @@
         "colab": {}
       },
       "source": [
-        "#@title Attentoin Head Visualization\n",
+        "#@title Attentoin Heads Visualization\n",
         "sent = \"I hated that movie\"#@param {type:\"string\"}\n",
         "toks, atts = get_att_tok(model, sent.lower())\n",
         "call_html()\n",
@@ -1164,8 +1172,8 @@
       "metadata": {
         "id": "cBQc5tBQ2sFJ",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {}
       },
       "source": [
         "#@title\n",
